Adding unit testing classes & SonarLint fixes